[package]
name = "md2hatena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hatena-rs = { git = "https://github.com/smallkirby/hatena-rs" }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1.0.30"
webbrowser = "0.8.0"
bytes = "1.1.0"
pulldown-cmark = "0.9.2"
rand = "0.8.4"
clap = { version = "3.2.2", features = ["derive"] }
